# SAML_ua

./: .gitignore  docker-compose.yml
MLHandler/: Dockerfile  build.gradle  settings.gradle  spectaql-config.yml
MLHandler/src/main/java/ml/knu/mlhandler/: MlHandlerApplication.java
MLHandler/src/main/java/ml/knu/mlhandler/config/: RestClientConfig.java  WebConfig.java
MLHandler/src/main/resources/: application.yaml
MLHandler/src/main/resources/graphql/: schema.graphqls
MLHandler/src/main/resources/static/: apiDoc.html
MLService/: .flaskenv  .gitignore  Dockerfile  pyproject.toml
MLService/flaskr/: app.py
MLService/flaskr/config/: di.py  logger.py
MLService/flaskr/consts/: mls.py
MLService/flaskr/controller/: controller.py
MLService/flaskr/service/: ml_handlers.py
MLService/flaskr/utils/: reader.py
MLService/tests/: test_controller.py  test_ml_handlers.py
Tokenizer/: .dockerignore  .flaskenv  Dockerfile  pyproject.toml
Tokenizer/flaskr/: app.py
Tokenizer/flaskr/config/: di.py  logger.py
Tokenizer/flaskr/consts/: patterns.py
Tokenizer/flaskr/controller/: controller.py
Tokenizer/flaskr/service/: cleaner.py  lemma.py  verifier.py
Tokenizer/flaskr/utils/: pattern.py
Tokenizer/tests/: test_cleaner.py  test_controller.py  test_lemma.py  test_pattern.py  test_verifier.py
resources/datasets/: 1.csv  2.csv  3.csv
resources/dicts/: dict.txt
resources/models/: tokenizer_rnn.pickle
ui/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
ui/src/: App.jsx  api.js
(+18 files in other folders)
